bubbaGrammarParser.py
# Generated from bubbaGrammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class bubbaGrammarParser ( Parser ):

    grammarFileName = "bubbaGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'prog'", "'main'", "'float'", "'int'", 
                     "'string'", "'print'", "'vars'", "'if'", "'else'", 
                     "'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "'+'", "'-'", "'*'", "'/'", "'>'", "'>='", "'<'", 
                     "'<='", "'='", "':'", "'\"'", "'&&'", "'||'", "'!'", 
                     "'=='", "'!='", "'while'", "'for'", "'step'", "'return'", 
                     "'class'", "'extends'", "'func'", "'void'", "'input'", 
                     "'to'" ]

    symbolicNames = [ "<INVALID>", "PROG", "MAIN", "FLOAT", "INT", "STRING", 
                      "PRINT", "VARS", "IF", "ELSE", "DOT", "COMMA", "LPARENTHESIS", 
                      "RPARENTHESIS", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "SEMICOLON", "ADD", "MINUS", "STAR", "SLASH", "GREATER", 
                      "GREATEREQ", "LESS", "LESSEQ", "EQUAL", "COLON", "QUOTE", 
                      "AND", "OR", "NOT", "EQEQUAL", "NOTEQUAL", "WHILE", 
                      "FOR", "STEP", "RETURN", "CLASS", "EXTENDS", "FUNC", 
                      "VOID", "INPUT", "TO", "V_STRING", "ID", "V_INT", 
                      "V_FLOAT", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_paux = 1
    RULE_paux2 = 2
    RULE_paux3 = 3
    RULE_main = 4
    RULE_whiler = 5
    RULE_whileaux = 6
    RULE_whileaux2 = 7
    RULE_forr = 8
    RULE_foraux = 9
    RULE_foraux2 = 10
    RULE_foraux3 = 11
    RULE_foraux4 = 12
    RULE_statement = 13
    RULE_lid = 14
    RULE_lidaux = 15
    RULE_laux = 16
    RULE_laux2 = 17
    RULE_maux = 18
    RULE_cond = 19
    RULE_condaux = 20
    RULE_condaux2 = 21
    RULE_condaux3 = 22
    RULE_assign = 23
    RULE_assignaux = 24
    RULE_factor = 25
    RULE_faux = 26
    RULE_faux2 = 27
    RULE_faux3 = 28
    RULE_faux4 = 29
    RULE_term = 30
    RULE_termaux = 31
    RULE_exp = 32
    RULE_expaux = 33
    RULE_aexp = 34
    RULE_aexpaux = 35
    RULE_aexps = 36
    RULE_bexp = 37
    RULE_bexpaux = 38
    RULE_expression = 39
    RULE_expressionaux = 40
    RULE_func = 41
    RULE_funcaux = 42
    RULE_classr = 43
    RULE_class_a = 44
    RULE_class_b = 45
    RULE_output = 46
    RULE_output_a = 47
    RULE_inputr = 48
    RULE_input_a = 49
    RULE_body = 50
    RULE_body_a = 51
    RULE_body_b = 52
    RULE_varsr = 53
    RULE_vars_a = 54
    RULE_vars_b = 55
    RULE_args = 56
    RULE_args_a = 57
    RULE_type_simple = 58
    RULE_call = 59
    RULE_call_a = 60
    RULE_call_b = 61
    RULE_params = 62
    RULE_params_a = 63
    RULE_var_cte = 64
    RULE_void = 65
    RULE_void_a = 66
    RULE_methods = 67

    ruleNames =  [ "program", "paux", "paux2", "paux3", "main", "whiler", 
                   "whileaux", "whileaux2", "forr", "foraux", "foraux2", 
                   "foraux3", "foraux4", "statement", "lid", "lidaux", "laux", 
                   "laux2", "maux", "cond", "condaux", "condaux2", "condaux3", 
                   "assign", "assignaux", "factor", "faux", "faux2", "faux3", 
                   "faux4", "term", "termaux", "exp", "expaux", "aexp", 
                   "aexpaux", "aexps", "bexp", "bexpaux", "expression", 
                   "expressionaux", "func", "funcaux", "classr", "class_a", 
                   "class_b", "output", "output_a", "inputr", "input_a", 
                   "body", "body_a", "body_b", "varsr", "vars_a", "vars_b", 
                   "args", "args_a", "type_simple", "call", "call_a", "call_b", 
                   "params", "params_a", "var_cte", "void", "void_a", "methods" ]

    EOF = Token.EOF
    PROG=1
    MAIN=2
    FLOAT=3
    INT=4
    STRING=5
    PRINT=6
    VARS=7
    IF=8
    ELSE=9
    DOT=10
    COMMA=11
    LPARENTHESIS=12
    RPARENTHESIS=13
    LBRACE=14
    RBRACE=15
    LBRACKET=16
    RBRACKET=17
    SEMICOLON=18
    ADD=19
    MINUS=20
    STAR=21
    SLASH=22
    GREATER=23
    GREATEREQ=24
    LESS=25
    LESSEQ=26
    EQUAL=27
    COLON=28
    QUOTE=29
    AND=30
    OR=31
    NOT=32
    EQEQUAL=33
    NOTEQUAL=34
    WHILE=35
    FOR=36
    STEP=37
    RETURN=38
    CLASS=39
    EXTENDS=40
    FUNC=41
    VOID=42
    INPUT=43
    TO=44
    V_STRING=45
    ID=46
    V_INT=47
    V_FLOAT=48
    WS=49
    COMMENT=50
    LINE_COMMENT=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROG(self):
            return self.getToken(bubbaGrammarParser.PROG, 0)

        def ID(self):
            return self.getToken(bubbaGrammarParser.ID, 0)

        def COLON(self):
            return self.getToken(bubbaGrammarParser.COLON, 0)

        def paux(self):
            return self.getTypedRuleContext(bubbaGrammarParser.PauxContext,0)


        def paux2(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Paux2Context,0)


        def paux3(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Paux3Context,0)


        def main(self):
            return self.getTypedRuleContext(bubbaGrammarParser.MainContext,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = bubbaGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(bubbaGrammarParser.PROG)
            self.state = 137
            self.match(bubbaGrammarParser.ID)
            self.state = 138
            self.match(bubbaGrammarParser.COLON)
            self.state = 139
            self.paux()
            self.state = 140
            self.paux2()
            self.state = 141
            self.paux3()
            self.state = 142
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PauxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classr(self):
            return self.getTypedRuleContext(bubbaGrammarParser.ClassrContext,0)


        def paux(self):
            return self.getTypedRuleContext(bubbaGrammarParser.PauxContext,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_paux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaux" ):
                listener.enterPaux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaux" ):
                listener.exitPaux(self)




    def paux(self):

        localctx = bubbaGrammarParser.PauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_paux)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bubbaGrammarParser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.classr()
                self.state = 145
                self.paux()
                pass
            elif token in [bubbaGrammarParser.MAIN, bubbaGrammarParser.VARS, bubbaGrammarParser.FUNC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paux2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varsr(self):
            return self.getTypedRuleContext(bubbaGrammarParser.VarsrContext,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_paux2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaux2" ):
                listener.enterPaux2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaux2" ):
                listener.exitPaux2(self)




    def paux2(self):

        localctx = bubbaGrammarParser.Paux2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paux2)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bubbaGrammarParser.VARS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.varsr()
                pass
            elif token in [bubbaGrammarParser.MAIN, bubbaGrammarParser.FUNC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paux3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methods(self):
            return self.getTypedRuleContext(bubbaGrammarParser.MethodsContext,0)


        def paux3(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Paux3Context,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_paux3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaux3" ):
                listener.enterPaux3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaux3" ):
                listener.exitPaux3(self)




    def paux3(self):

        localctx = bubbaGrammarParser.Paux3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paux3)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bubbaGrammarParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.methods()
                self.state = 155
                self.paux3()
                pass
            elif token in [bubbaGrammarParser.MAIN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(bubbaGrammarParser.MAIN, 0)

        def LPARENTHESIS(self):
            return self.getToken(bubbaGrammarParser.LPARENTHESIS, 0)

        def RPARENTHESIS(self):
            return self.getToken(bubbaGrammarParser.RPARENTHESIS, 0)

        def LBRACE(self):
            return self.getToken(bubbaGrammarParser.LBRACE, 0)

        def body(self):
            return self.getTypedRuleContext(bubbaGrammarParser.BodyContext,0)


        def RBRACE(self):
            return self.getToken(bubbaGrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = bubbaGrammarParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(bubbaGrammarParser.MAIN)
            self.state = 161
            self.match(bubbaGrammarParser.LPARENTHESIS)
            self.state = 162
            self.match(bubbaGrammarParser.RPARENTHESIS)
            self.state = 163
            self.match(bubbaGrammarParser.LBRACE)
            self.state = 164
            self.body()
            self.state = 165
            self.match(bubbaGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(bubbaGrammarParser.WHILE, 0)

        def LPARENTHESIS(self):
            return self.getToken(bubbaGrammarParser.LPARENTHESIS, 0)

        def expression(self):
            return self.getTypedRuleContext(bubbaGrammarParser.ExpressionContext,0)


        def RPARENTHESIS(self):
            return self.getToken(bubbaGrammarParser.RPARENTHESIS, 0)

        def LBRACE(self):
            return self.getToken(bubbaGrammarParser.LBRACE, 0)

        def whileaux(self):
            return self.getTypedRuleContext(bubbaGrammarParser.WhileauxContext,0)


        def RBRACE(self):
            return self.getToken(bubbaGrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_whiler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhiler" ):
                listener.enterWhiler(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhiler" ):
                listener.exitWhiler(self)




    def whiler(self):

        localctx = bubbaGrammarParser.WhilerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whiler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(bubbaGrammarParser.WHILE)
            self.state = 168
            self.match(bubbaGrammarParser.LPARENTHESIS)
            self.state = 169
            self.expression()
            self.state = 170
            self.match(bubbaGrammarParser.RPARENTHESIS)
            self.state = 171
            self.match(bubbaGrammarParser.LBRACE)
            self.state = 172
            self.whileaux()
            self.state = 173
            self.match(bubbaGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileauxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(bubbaGrammarParser.StatementContext,0)


        def whileaux2(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Whileaux2Context,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_whileaux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileaux" ):
                listener.enterWhileaux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileaux" ):
                listener.exitWhileaux(self)




    def whileaux(self):

        localctx = bubbaGrammarParser.WhileauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileaux)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.statement()
            self.state = 176
            self.whileaux2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Whileaux2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whileaux(self):
            return self.getTypedRuleContext(bubbaGrammarParser.WhileauxContext,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_whileaux2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileaux2" ):
                listener.enterWhileaux2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileaux2" ):
                listener.exitWhileaux2(self)




    def whileaux2(self):

        localctx = bubbaGrammarParser.Whileaux2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileaux2)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bubbaGrammarParser.PRINT, bubbaGrammarParser.IF, bubbaGrammarParser.WHILE, bubbaGrammarParser.FOR, bubbaGrammarParser.INPUT, bubbaGrammarParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.whileaux()
                pass
            elif token in [bubbaGrammarParser.RBRACE]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(bubbaGrammarParser.FOR, 0)

        def foraux(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bubbaGrammarParser.ForauxContext)
            else:
                return self.getTypedRuleContext(bubbaGrammarParser.ForauxContext,i)


        def TO(self):
            return self.getToken(bubbaGrammarParser.TO, 0)

        def foraux2(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Foraux2Context,0)


        def LBRACE(self):
            return self.getToken(bubbaGrammarParser.LBRACE, 0)

        def foraux3(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Foraux3Context,0)


        def RBRACE(self):
            return self.getToken(bubbaGrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_forr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForr" ):
                listener.enterForr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForr" ):
                listener.exitForr(self)




    def forr(self):

        localctx = bubbaGrammarParser.ForrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(bubbaGrammarParser.FOR)
            self.state = 183
            self.foraux()
            self.state = 184
            self.match(bubbaGrammarParser.TO)
            self.state = 185
            self.foraux()
            self.state = 186
            self.foraux2()
            self.state = 187
            self.match(bubbaGrammarParser.LBRACE)
            self.state = 188
            self.foraux3()
            self.state = 189
            self.match(bubbaGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForauxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def V_INT(self):
            return self.getToken(bubbaGrammarParser.V_INT, 0)

        def ID(self):
            return self.getToken(bubbaGrammarParser.ID, 0)

        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_foraux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForaux" ):
                listener.enterForaux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForaux" ):
                listener.exitForaux(self)




    def foraux(self):

        localctx = bubbaGrammarParser.ForauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_foraux)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            _la = self._input.LA(1)
            if not(_la==bubbaGrammarParser.ID or _la==bubbaGrammarParser.V_INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Foraux2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STEP(self):
            return self.getToken(bubbaGrammarParser.STEP, 0)

        def foraux(self):
            return self.getTypedRuleContext(bubbaGrammarParser.ForauxContext,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_foraux2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForaux2" ):
                listener.enterForaux2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForaux2" ):
                listener.exitForaux2(self)




    def foraux2(self):

        localctx = bubbaGrammarParser.Foraux2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_foraux2)
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bubbaGrammarParser.STEP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.match(bubbaGrammarParser.STEP)
                self.state = 194
                self.foraux()
                pass
            elif token in [bubbaGrammarParser.LBRACE]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Foraux3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(bubbaGrammarParser.StatementContext,0)


        def foraux4(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Foraux4Context,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_foraux3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForaux3" ):
                listener.enterForaux3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForaux3" ):
                listener.exitForaux3(self)




    def foraux3(self):

        localctx = bubbaGrammarParser.Foraux3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_foraux3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.statement()
            self.state = 199
            self.foraux4()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Foraux4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def foraux3(self):
            return self.getTypedRuleContext(bubbaGrammarParser.Foraux3Context,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_foraux4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForaux4" ):
                listener.enterForaux4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForaux4" ):
                listener.exitForaux4(self)




    def foraux4(self):

        localctx = bubbaGrammarParser.Foraux4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_foraux4)
        try:
            self.state = 203
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [bubbaGrammarParser.PRINT, bubbaGrammarParser.IF, bubbaGrammarParser.WHILE, bubbaGrammarParser.FOR, bubbaGrammarParser.INPUT, bubbaGrammarParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.foraux3()
                pass
            elif token in [bubbaGrammarParser.RBRACE]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(bubbaGrammarParser.AssignContext,0)


        def call(self):
            return self.getTypedRuleContext(bubbaGrammarParser.CallContext,0)


        def cond(self):
            return self.getTypedRuleContext(bubbaGrammarParser.CondContext,0)


        def forr(self):
            return self.getTypedRuleContext(bubbaGrammarParser.ForrContext,0)


        def whiler(self):
            return self.getTypedRuleContext(bubbaGrammarParser.WhilerContext,0)


        def output(self):
            return self.getTypedRuleContext(bubbaGrammarParser.OutputContext,0)


        def inputr(self):
            return self.getTypedRuleContext(bubbaGrammarParser.InputrContext,0)


        def getRuleIndex(self):
            return bubbaGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = bubbaGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statement)
        try:
            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 207
                self.cond()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 208
                self.forr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 209
                self.whiler()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 210
                self.output()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 211
                self.inputr()
                pass

